fix overflow for lower zoom levels

--- a/src/components/Aside/Aside.module.css
+++ b/src/components/Aside/Aside.module.css
@@ -7,6 +7,6 @@
   width: 20rem;
   height: 100%;
   overflow: hidden;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding-left: 1rem;
 }
